@media, botsstrap, img nuevas y correcion de grid area

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rajdhani:wght@600&family=Staatliches&display=swap" rel="stylesheet">
     <link rel="shorcut icon" href="./media/icono.ico">
+    <!-- link de animate animated y wow -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/animate.css">
+    <!-- cdn de bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootstrap-grid.min.css">
+    <!-- css carpeta local con el estilo propio -->
     <link rel="stylesheet" href="./css/estilo.css">
     <title>c>_WG Home</title>
     <link rel="stylesheet" href="index.html">
@@ -265,6 +268,8 @@
         <a href="#top">Ir al inicio</a>
         </div>
     </footer>
+
+    <!-- Scripts de wow, popper y bootstrap -->
     <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
