--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -42,13 +42,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../media/devgamer1.jpg" class="d-block w-100" alt="Gamers">
+                <img src="../media/game1.jpg" class="d-block w-100" alt="Gamers">
             </div>
             <div class="carousel-item">
-                <img src="../media/devgamer2.jpg" class="d-block w-100" alt="dev">
+                <img src="../media/game2.jpg" class="d-block w-100" alt="dev">
             </div>
             <div class="carousel-item">
-                <img src="../media/devgamer3.jpg" class="d-block w-100" alt="Music">
+                <img src="../media/game3.jpg" class="d-block w-100" alt="Music">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
