--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -42,13 +42,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../media/devgamer1.jpg" class="d-block w-100" alt="Gamers">
+                <img src="../media/hard1.jpg" class="d-block w-100" alt="Gamers">
             </div>
             <div class="carousel-item">
-                <img src="../media/devgamer2.jpg" class="d-block w-100" alt="dev">
+                <img src="../media/hard2.jpg" class="d-block w-100" alt="dev">
             </div>
             <div class="carousel-item">
-                <img src="../media/devgamer3.jpg" class="d-block w-100" alt="Music">
+                <img src="../media/hard3.jpg" class="d-block w-100" alt="Music">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -99,170 +99,74 @@
             </div>
         </div>
     </nav>
-    <!-- Grilla de bootstrap -->
-    <main class="container-fluid">
-        <div class="row">
-            <div class="col-1 categorias">
-                <ul>
-                    <li>Hard</li>
-                    <li>Soft</li>
-                    <li>Motherboards</li>
-                    <li>Procesadores</li>
-                    <li>Memorias</li>
-                    <li>Almacenamiento</li>
-                    <li>Placas de Video</li>
-                    <li>Gabinetes</li>
-                    <li>Fuentes Power</li>
-                    <li>Refrigeración</li>
-                    <li>Juegos</li>
-                    <li>S. Operativos</li>
-                    <li>Accesorios Gamer</li>
-                    <li>Sonido</li>
-                    <li>Ofertas</li>
-                </ul>
-            </div>
-            <div class="col-10 articulos">
-                <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art1">
-                    <p> hard Gamer</p>
-                </div>
-                <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art2">
-                    <p> hard Gamer</p>
-                </div>
-                <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art3">
-                    <p> hard Gamer</p>
-                </div>
-                <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art4">
-                    <p> hard Gamer</p>
-                </div>
-                <div class="cathard wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art5">
-                    <p>Hard for work</p>
-                </div>
-                <div class="cathard wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art6">
-                    <p>Hard for work</p>
-                </div>
-                <div class="cathard wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art7">
-                    <p>Hard for work</p>
-                </div>
-                <div class="cathard wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art8">
-                    <p>Hard for work</p>
-                </div>
-                <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art9">
-                    <p>Games PS4</p>
-                </div>
-                <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art10">
-                    <p>Game PS5</p>
-                </div>
-                <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art11">
-                    <p>Game XBox One</p>
-                </div>
-                <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art12">
-                    <p>Game Nintendo</p>
-                </div>
-                <div class="catsoft wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art13">
-                    <p>Adobe Premiere Pro</p>
-                </div>
-                <div class="catsoft wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art14">
-                    <p>Office 1465 Pro</p>
-                </div>
-                <div class="catsoft wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Sitema Operativo</p>
-                </div>
-                <div class="catsoft wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>ABM stock y facturación</p>
-                </div>
-                <div class="cataccesorios catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Gabinete Gamer</p>
-                </div>
-                <div class="cataccesorios catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Teclado Gamer</p>
-                </div>
-                <div class="cataccesorios catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Auriculares Gamer</p>
-                </div>
-                <div class="cataccesorios catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Refrigeracion líquida Gamer</p>
-                </div>
-                <div class="cataccesorios wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Teclado multimedia</p>
-                </div>
-                <div class="cataccesorios wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Parlantes 2.1</p>
-                </div>
-                <div class="cataccesorios wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Mouse wireless</p>
-                </div>
-                <div class="cataccesorios wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Webcam FHD</p>
-                </div>
-            </div>
+    <!-- Grilla de Grid -->
+    <h2 class="separador">Algunas cuestiones a tener en cuenta</h2>
+    <main class="contenedor1">
+        <div class="reco1">
+            <h2>No te apures, primero preguntate para que vas a usar tu hard</h2>
+            <p>Dependiendo de tu actividad deberias pensar si <br> precisas mas potencia de calculo delprocesador, mas velocidad para jugar o gran almacenamiento para archivar</p>
+        </div>
+        <div class="reco2">
+            <h2>No todo lo que brilla es oro</h2>
+            <p>Las empresas se esmeran por decorar de forma excesiva sus productos y así llamar la atencion pero tene en cuenta que siempre la calidad es mas importante</p>
+        </div>
+        <div class="reco3">
+            <h2>Informate sobre nuevas alternativas </h2>
+            <p>Tal vez una procesador grafico integrado cubra tus necesidades ya que en la actualidad tienen la capaidad de soportar exigencias tanto para diseñar como para jugar.</p><br>
+        </div>
+        <div class="reco4">
+            <h2>Mas caro no siempres es mejor </h2>
+            <p>Dependiendo de tu actividad deberia poner enfasis si precisas mas potencia de calculo delprocesador, mas velocidad para jugar o gran almacenamiento para archivar</p><br>
+        </div>
+        <div class="reco5">
+            <h2>Estamos para ayudarte a elegir</h2>
+            <p>Existen ciertas compatibilidades entre dispositivos que se deben respetar a la hora de comprar, por lo que es vital que nos consultes si vas a agregar un repuesto nuevo a un dispositivo ya armado.</p><br>
+        </div>
+        <div class="reco6">
+            <h2>Por último, aprovecha nuestras ofertas! </h2>
+            <p>Siempre tenemos artículos de lanzamiento que se ofrecen por menor valor que su antecesor, asi que veni y aprovechalos!</p><br>
         </div>
     </main>
-    <h2 class="separador">Tomemos un recreo</h2>
-    <br>
-    <section class="recreo ">
-        <div class="recreo__uno">
-            <p>Consejos para mejorar tu productividad o simplementes unos tipppsss.. 😉 <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. suscipit ullam expedita.</p>
-            <iframe class="recreo__uno__video" width="560" height="315" src="https://www.youtube.com/embed/hZPgPHGM_xg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div class="recreo__dos">
-            <h3 class="recreo__dos__texto">
-            </h3>
-            <p>Competencias Gamers! y sacale el jugo a tu compu 🕹 <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Recusandae tempora explicabo repellendus labore quisquam.</p>
-            <iframe class="recreo__dos__video" width="560" height="315" src="https://www.youtube.com/embed/iGoirv2lLMY?start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-        <div class="recreo2__texto2">
+    <h2 class="separador">Los mas buscados</h2>
+    <section class="opciones">
+        <div class="col-10 articulos">
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art1">
+                <p> hard Gamer</p>
+            </div>
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art2">
+                <p> hard Gamer</p>
+            </div>
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art3">
+                <p> hard Gamer</p>
+            </div>
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art4">
+                <p> hard Gamer</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art5">
+                <p>Hard for work</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art6">
+                <p>Hard for work</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art7">
+                <p>Hard for work</p>
+            </div>
         </div>
     </section>
-    </main>
     <footer class="container-fluid">
         <div class="dire">
             <h6>&copy Todos los derechos reservados por JLG 2021 <br> en el curso de "Desarrollo Wed" de CoderHouse</h6>
