--- a/pages/software.html
+++ b/pages/software.html
@@ -42,13 +42,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../media/devgamer1.jpg" class="d-block w-100" alt="Gamers">
+                <img src="../media/soft1.jpg" class="d-block w-100" alt="Gamers">
             </div>
             <div class="carousel-item">
-                <img src="../media/devgamer2.jpg" class="d-block w-100" alt="dev">
+                <img src="../media/soft2.jpg" class="d-block w-100" alt="dev">
             </div>
             <div class="carousel-item">
-                <img src="../media/devgamer3.jpg" class="d-block w-100" alt="Music">
+                <img src="../media/soft3.jpg" class="d-block w-100" alt="Music">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -99,152 +99,6 @@
             </div>
         </div>
     </nav>
-    <!-- Grilla de bootstrap -->
-    <main class="container-fluid">
-        <div class="row">
-            <div class="col-1 categorias">
-                <ul>
-                    <li>Hard</li>
-                    <li>Soft</li>
-                    <li>Motherboards</li>
-                    <li>Procesadores</li>
-                    <li>Memorias</li>
-                    <li>Almacenamiento</li>
-                    <li>Placas de Video</li>
-                    <li>Gabinetes</li>
-                    <li>Fuentes Power</li>
-                    <li>Refrigeración</li>
-                    <li>Juegos</li>
-                    <li>S. Operativos</li>
-                    <li>Accesorios Gamer</li>
-                    <li>Sonido</li>
-                    <li>Ofertas</li>
-                </ul>
-            </div>
-            <div class="col-10 articulos">
-                <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art1">
-                    <p> hard Gamer</p>
-                </div>
-                <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art2">
-                    <p> hard Gamer</p>
-                </div>
-                <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art3">
-                    <p> hard Gamer</p>
-                </div>
-                <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art4">
-                    <p> hard Gamer</p>
-                </div>
-                <div class="cathard wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art5">
-                    <p>Hard for work</p>
-                </div>
-                <div class="cathard wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art6">
-                    <p>Hard for work</p>
-                </div>
-                <div class="cathard wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art7">
-                    <p>Hard for work</p>
-                </div>
-                <div class="cathard wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art8">
-                    <p>Hard for work</p>
-                </div>
-                <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art9">
-                    <p>Games PS4</p>
-                </div>
-                <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art10">
-                    <p>Game PS5</p>
-                </div>
-                <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art11">
-                    <p>Game XBox One</p>
-                </div>
-                <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art12">
-                    <p>Game Nintendo</p>
-                </div>
-                <div class="catsoft wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art13">
-                    <p>Adobe Premiere Pro</p>
-                </div>
-                <div class="catsoft wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art14">
-                    <p>Office 1465 Pro</p>
-                </div>
-                <div class="catsoft wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Sitema Operativo</p>
-                </div>
-                <div class="catsoft wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>ABM stock y facturación</p>
-                </div>
-                <div class="cataccesorios catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Gabinete Gamer</p>
-                </div>
-                <div class="cataccesorios catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Teclado Gamer</p>
-                </div>
-                <div class="cataccesorios catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Auriculares Gamer</p>
-                </div>
-                <div class="cataccesorios catgamer wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Refrigeracion líquida Gamer</p>
-                </div>
-                <div class="cataccesorios wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Teclado multimedia</p>
-                </div>
-                <div class="cataccesorios wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Parlantes 2.1</p>
-                </div>
-                <div class="cataccesorios wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Mouse wireless</p>
-                </div>
-                <div class="cataccesorios wow animate__animated animate__fadeIn">
-                    <p>Nombre del producto</p>
-                    <img src="../media/vga.jpg" width="200px" alt="art15">
-                    <p>Webcam FHD</p>
-                </div>
-            </div>
-        </div>
-    </main>
     <h2 class="separador">Tomemos un recreo</h2>
     <br>
     <section class="recreo ">
@@ -262,6 +116,61 @@
         <div class="recreo2__texto2">
         </div>
     </section>
+    <!-- Grilla de bootstrap -->
+    <h2 class="separador">Programas, aplicaciones y juegos</h2>
+    <main class="container-fluid">
+        <div class="col-10 articulos">
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art1">
+                <p> hard Gamer</p>
+            </div>
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art2">
+                <p> hard Gamer</p>
+            </div>
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art3">
+                <p> hard Gamer</p>
+            </div>
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art4">
+                <p> hard Gamer</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art5">
+                <p>Hard for work</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art6">
+                <p>Hard for work</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art7">
+                <p>Hard for work</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art8">
+                <p>Hard for work</p>
+            </div>
+            <div class="catsoft catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art9">
+                <p>Games PS4</p>
+            </div>
+            <div class="catsoft catgamer wow animate__animated animate__fadeIn">
+                <p>Nombre del producto</p>
+                <img src="../media/vga.jpg" width="200px" alt="art10">
+                <p>Game PS5</p>
+            </div>
+        </div>
     </main>
     <footer class="container-fluid">
         <div class="dire">
