proyecto entero en SASS1

--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -104,19 +104,19 @@
     <main class="contenedor1">
         <div class="reco1">
             <h2>No te apures, primero preguntate para que vas a usar tu hard</h2>
-            <p>Dependiendo de tu actividad deberias pensar si <br> precisas mas potencia de calculo delprocesador, mas velocidad para jugar o gran almacenamiento para archivar</p>
+            <p>Dependiendo de tu actividad deberías pensar si <br> precisas más potencia de cálculo del procesador, más velocidad para jugar o gran almacenamiento para archivar</p>
         </div>
         <div class="reco2">
             <h2>No todo lo que brilla es oro</h2>
-            <p>Las empresas se esmeran por decorar de forma excesiva sus productos y así llamar la atencion pero tene en cuenta que siempre la calidad es mas importante</p>
+            <p>Las empresas se esmeran por decorar de forma excesiva sus productos y así llamar la atencion pero tene en cuenta que siempre la calidad es más importante</p>
         </div>
         <div class="reco3">
             <h2>Informate sobre nuevas alternativas </h2>
-            <p>Tal vez una procesador grafico integrado cubra tus necesidades ya que en la actualidad tienen la capaidad de soportar exigencias tanto para diseñar como para jugar.</p><br>
+            <p>Tal vez un procesador gráfico integrado cubra tus necesidades ya que en la actualidad tienen la capacidad de soportar exigencias tanto para diseñar como para jugar.</p><br>
         </div>
         <div class="reco4">
             <h2>Mas caro no siempres es mejor </h2>
-            <p>Dependiendo de tu actividad deberia poner enfasis si precisas mas potencia de calculo delprocesador, mas velocidad para jugar o gran almacenamiento para archivar</p><br>
+            <p>Dependiendo de tu actividad deberia poner énfasis si precisas más potencia de cálculo del procesador, más velocidad para jugar o gran almacenamiento para archivar</p><br>
         </div>
         <div class="reco5">
             <h2>Estamos para ayudarte a elegir</h2>
@@ -127,7 +127,7 @@
             <p>Siempre tenemos artículos de lanzamiento que se ofrecen por menor valor que su antecesor, asi que veni y aprovechalos!</p><br>
         </div>
     </main>
-    <h2 class="separador">Los mas buscados</h2>
+    <h2 class="separador">Los más buscados</h2>
     <section class="opciones">
         <div class="col-10 articulos">
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
