--- a/pages/software.html
+++ b/pages/software.html
@@ -5,18 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Fonts de google: Orbitron,Rajdhani y Staatliches-->
+    <!----- Description y keywords para SEO -->
+    <meta name="description" content="Tenmos los juegos, sistemas operativos y programas de trabajo más demandados al mejor precio">
+    <meta name="keywords" content="windows, office, vga, placas de video, RTX, teclado, gaming, gamer, competencias, asesoramiento, oencofertas,actualizacion, hardware, software, PS4, nintendo, adobe, visual,EA sports">
+    <!----- Fonts de google: Orbitron,Rajdhani y Staatliches -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rajdhani:wght@600&family=Staatliches&display=swap" rel="stylesheet">
+    <!----- Favicon ----->
     <link rel="shorcut icon" href="../media/icono.ico">
+    <!----- links de animate animated y wow -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/animate.css">
+    <!----- CDN de bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap-grid.min.css">
+    <!----- CSS local de estilo propio -->
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>c>_WG Software</title>
-    <link rel="stylesheet" href="pages/softeware.html">
+    <title>Soft >_WG todo el hard y soft que buscas con el mejor asesoramiento</title>
+    <link rel="stylesheet" href="index.html">s
 </head>
 
 <body>
@@ -26,12 +33,20 @@
             <h1 id="top">codigo>_WG </h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
-        <div class="redes">
-            <img src="../media/instagram.png" whidth="32px" alt="instagram">
-            <img src="../media/facebook.png" whidth="32px" alt="facebook">
-            <img src="../media/twitter.png" whidth="32px" alt="twitter">
-            <img src="../media/whatsapp.png" whidth="32px" alt="whatsapp">
-        </div>
+        <section class="redes">
+            <div>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+            </div>
+            <div>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+            </div>
+            <div>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+            </div>
+            <div>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+            </div>
+        </section>
     </header>
     <!-- carrusel de bootstrap-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -42,13 +57,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../media/soft1.jpg" class="d-block w-100" alt="Gamers">
+                <img src="../media/carousel/soft1.jpg" class="d-block w-100" alt="diseño de espacios">
             </div>
             <div class="carousel-item">
-                <img src="../media/soft2.jpg" class="d-block w-100" alt="dev">
+                <img src="../media/carousel/soft2.jpg" class="d-block w-100" alt="cursor de manito">
             </div>
             <div class="carousel-item">
-                <img src="../media/soft3.jpg" class="d-block w-100" alt="Music">
+                <img src="../media/carousel/soft3.jpg" class="d-block w-100" alt="estadísticas">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -62,7 +77,7 @@
     </div>
     <!-- Navegador personalizado de bootstrap-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
-        <div class="container-fluid ">
+        <div class="container-fluid lead">
             <a class="navbar-brand" href="../index.html"><img src="../media/logo2.jpg" width="200px" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,11 +90,11 @@
                     </a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item text-primary " href="../pages/hardware.html">Hard</a></li>
-                            <li><a class="dropdown-item text-primary " href="../pages/software.html">Software </a></li>
+                            <li><a class="dropdown-item text-primary " href="../pages/hardware.html">Accesorios </a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item text-primary" href="../pages/gaming.html">Destino Gamer</a></li>
+                            <li><a class="dropdown-item text-primary" href="../pages/gaming.html">Gamer</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -89,11 +104,11 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html" target="_blank">Contactenos</a>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">🔎</button>
                 </form>
             </div>
@@ -101,77 +116,84 @@
     </nav>
     <h2 class="separador">Tomemos un recreo</h2>
     <br>
-    <section class="recreo ">
+    <!-- Seccion recreo -->
+    <section class="recreo">
         <div class="recreo__uno">
-            <p>Consejos para mejorar tu productividad o simplementes unos tipppsss.. 😉 <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. suscipit ullam expedita.</p>
-            <iframe class="recreo__uno__video" width="560" height="315" src="https://www.youtube.com/embed/hZPgPHGM_xg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/p0t1x8ZM_-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div>
+                <h3>CTutorial Diseño Gráfico ¿Cuáles son las Herramientas Necesarias?</h3>
+                <p>En este tutorial vemos todo lo que necesitamos para nuestro curso de Diseño Gráfico para principiantes. No se necesita experiencia previa</p>
+            </div>
         </div>
         <div class="recreo__dos">
-            <h3 class="recreo__dos__texto">
-            </h3>
-            <p>Competencias Gamers! y sacale el jugo a tu compu 🕹 <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Recusandae tempora explicabo repellendus labore quisquam.</p>
-            <iframe class="recreo__dos__video" width="560" height="315" src="https://www.youtube.com/embed/iGoirv2lLMY?start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-        <div class="recreo2__texto2">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WKl4EoRIlz4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div>
+                <h3 class="recreo__dos__texto">Competencias Gamers! y sacale el jugo a tu compu 🕹
+                </h3>
+                <p>Te contamos todo lo que necesitas saber sobre la Fortnite World Cup 2019, el torneo mundial del famoso Battle Royale en el cual se disputaron millones de dolares. </p>
+            </div>
         </div>
     </section>
-    <!-- Grilla de bootstrap -->
+    <!-- Software products -->
     <h2 class="separador">Programas, aplicaciones y juegos</h2>
-    <main class="container-fluid">
-        <div class="col-10 articulos">
-            <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art1">
-                <p> hard Gamer</p>
-            </div>
-            <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art2">
-                <p> hard Gamer</p>
-            </div>
-            <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art3">
-                <p> hard Gamer</p>
-            </div>
-            <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art4">
-                <p> hard Gamer</p>
-            </div>
-            <div class="cathard wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art5">
-                <p>Hard for work</p>
-            </div>
-            <div class="cathard wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art6">
-                <p>Hard for work</p>
-            </div>
-            <div class="cathard wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art7">
-                <p>Hard for work</p>
-            </div>
-            <div class="cathard wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art8">
-                <p>Hard for work</p>
-            </div>
-            <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art9">
-                <p>Games PS4</p>
-            </div>
-            <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art10">
-                <p>Game PS5</p>
+    <div class="articulos software">
+        <div class="catsoft catgamer wow animate__animated animate__fadeIn">
+            <img src="../media/articulos/soft_call_of_duty.jpg" width="200px" alt="Call of Duty®: Vanguard">
+            <div>
+                <h3>Call of Duty®: Vanguard = $12.300.-</h3>
+                <p> Se requiere PS Plus para jugar online - Compras dentro del juego opcionales - Admite hasta 48 jugadores online que tengan PS Plus - Juego online opcional 1-2 jugadores - Mejorado para PS4 Pro - Vibración del control DUALSHOCK 4</p>
             </div>
         </div>
-    </main>
+        <div class="catsoft catgamer wow animate__animated animate__fadeIn">
+            <img src="../media/articulos/soft_ghost.jpg" width="200px" alt="Ghost of Tsushima Bonus Content">
+            <div>
+                <h3>Ghost of Tsushima Bonus Content = $13.600.-</h3>
+                <p> Se requiere PS Plus para jugar online - Admite hasta 4 jugadores online que tengan PS Plus - Juego online opcional - 1 jugador - Mejorado para PS4 Pro - Vibración del control DUALSHOCK 4</p>
+            </div>
+        </div>
+        <div class="catsoft catgamer wow animate__animated animate__fadeIn">
+            <img src="../media/articulos/soft_horizon.jpg" width="200px" alt="Horizon Zero Dawn: Complete Edition">
+            <div>
+                <h3>Horizon Zero Dawn: Complete Edition = $11.000.- </h3>
+                <p> Vive la aventura completa de Horizon Zero Dawn. Conviértete en la habilidosa cazadora Aloy y explora un mundo exuberante habitado por misteriosas criaturas mecanizadas, en un nuevo y emocionante juego de rol, acción y mundo abierto, exclusivamente
+                    para la consola PlayStation®4./p></p>
+            </div>
+        </div>
+        <div class="catsoft catgamer wow animate__animated animate__fadeIn">
+            <img src="../media/articulos/soft_office365.png" width="200px" alt="Microsoft Office 365 ">
+            <div>
+                <h3>Microsoft Office 365 = $18.700.-</h3>
+                <p>Idiomas: todos los idiomas | Tipo de licencia: de por vida para 1 PC - Office 365 es para pequeñas empresas en crecimiento que desean las aplicaciones clásicas de Office (Word, Excel y PowerPoint) además de Outlook, Publisher, Access,
+                    Skype for Business y la capacidad de guardar documentos en OneDrive o localmente en su computadora. Se aplica solo a PC con Windows 10 y Windows 11.
+            </div>
+        </div>
+        <div class="catsoft wow animate__animated animate__fadeIn">
+            <img src="../media/articulos/soft_visual_studio.png" width="200px" alt="Microsoft Visual Studio Enterprise 2019">
+            <div>
+                <h3>Microsoft Visual Studio Enterprise 2019 (PC & Mac) </h3>
+                <p>Tipo de licencia: de por vida para 1 PC | Funciona en sistemas de 32 y 64 bitsLa clave del producto y las instrucciones de instalación se envían por correo electrónico después de la compra. Idiomas: español, inglés, francés, alemán, italiano,
+                    polaco, checo, portugués (Brasil), ruso, turco, chino (simplificado), chino (tradicional), japonés, coreano. Visual Studio 2019 es una solución completa e integrada con herramientas de desarrollo, servicios en la nube y extensionesque
+                    le permiten a usted y a su equipo crear aplicaciones y juegos increíbles para computadoras de escritorio, Internet, Windows Store, Android e iOS.</p>
+            </div>
+        </div>
+        <div class="catsoft wow animate__animated animate__fadeIn">
+            <img src="../media/articulos/soft_win10.png" width="200px" alt="Windows 10 Home">
+            <div>
+                <h3>Windows 10 Home Retail $17.500.-</h3>
+                <p>Idiomas: Todos los idiomas | 32/64 bLa clave del producto y las instrucciones se envían por correo electrónico inmediatamente después de la compra de este producto. Retail: La clave de producto se puede activar en una computadora a la
+                    vez, pero se puede mover a una nueva computadora si es necesario.</p>
+            </div>
+        </div>
+        <div class="catsoft wow animate__animated animate__fadeIn">
+            <img src="../media/articulos/soft_win_server.jpg" width="200px" alt="Microsoft Windows Server 2016 Standard">
+            <div>
+                <h3>Microsoft Windows Server 2016 Standard 16 core = $ 13.200.-</h3>
+                <p>Se requiere un mínimo de 8 licencias de núcleo para cada procesador físico y un mínimo de 16 licencias de núcleo para cada servidor. Por lo tanto, esta licencia puede activar hasta 2 procesadores físicos. Standard Edition proporciona derechos
+                    para hasta 2 entornos de sistema operativo o contenedores de servidores Windows con aislamiento de Hyper-V cuando todos los núcleos físicos del servidor tienen licencia. Por cada 1 o 2 VM adicionales, todos los núcleos físicos en el
+                    servidor deben tener licencia nuevamente.</p>
+            </div>
+        </div>
+    </div>
     <footer class="container-fluid">
         <div class="dire">
             <h6>&copy Todos los derechos reservados por JLG 2021 <br> en el curso de "Desarrollo Wed" de CoderHouse</h6>
@@ -183,12 +205,20 @@
             <h1 id="top">codigo>_WG </h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
-        <div class="redes">
-            <img src="../media/instagram.png" whidth="32px" height="32px" alt="instagram">
-            <img src="../media/facebook.png" whidth="32px" height="32px" alt="facebook">
-            <img src="../media/twitter.png" whidth="32px" height="32px" alt="twitter">
-            <img src="../media/whatsapp.png" whidth="32px" height="32px" alt="whatsapp">
-        </div>
+        <section class="redes">
+            <div>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+            </div>
+            <div>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+            </div>
+            <div>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+            </div>
+            <div>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+            </div>
+        </section>
         <a href="#top">Ir al inicio</a>
         </div>
     </footer>
