--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,18 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Fonts de google: Orbitron,Rajdhani y Staatliches-->
+    <!----- Description y keywords para SEO -->
+    <meta name="description" content="Te vamos a ayudar en tu compra, comunicate con nosotros y te asistiremos con gusto">
+    <meta name="keywords" content="windows, office, vga, placas de video, RTX, teclado, gaming, gamer, competencias, asesoramiento, oencofertas,actualizacion, hardware, software, PS4, nintendo, adobe, visual,EA sports">
+    <!----- Fonts de google: Orbitron,Rajdhani y Staatliches -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rajdhani:wght@600&family=Staatliches&display=swap" rel="stylesheet">
+    <!----- Favicon ----->
     <link rel="shorcut icon" href="../media/icono.ico">
+    <!----- links de animate animated y wow -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/animate.css">
+    <!----- CDN de bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap-grid.min.css">
+    <!----- CSS local de estilo propio -->
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>c>_WG Contactanos</title>
-    <link rel="stylesheet" href="pages/gamer.html">
+    <title>Contacto >_WG todo el hard y soft que buscas con el mejor asesoramiento</title>
+    <link rel="stylesheet" href="index.html">
 </head>
 
 <body>
@@ -26,12 +33,20 @@
             <h1 id="top">codigo>_WG </h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
-        <div class="redes">
-            <img src="../media/instagram.png" whidth="32px" alt="instagram">
-            <img src="../media/facebook.png" whidth="32px" alt="facebook">
-            <img src="../media/twitter.png" whidth="32px" alt="twitter">
-            <img src="../media/whatsapp.png" whidth="32px" alt="whatsapp">
-        </div>
+        <section class="redes">
+            <div>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+            </div>
+            <div>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+            </div>
+            <div>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+            </div>
+            <div>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+            </div>
+        </section>
     </header>
     <!-- carrusel de bootstrap-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -42,13 +57,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../media/devgamer1.jpg" class="d-block w-100" alt="Gamers">
+                <img src="../media/carousel/devgamer1.jpg" class="d-block w-100" alt="Gamers">
             </div>
             <div class="carousel-item">
-                <img src="../media/devgamer2.jpg" class="d-block w-100" alt="dev">
+                <img src="../media/carousel/devgamer2.jpg" class="d-block w-100" alt="dev">
             </div>
             <div class="carousel-item">
-                <img src="../media/devgamer3.jpg" class="d-block w-100" alt="Music">
+                <img src="../media/carousel/devgamer3.jpg" class="d-block w-100" alt="Music">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -62,7 +77,7 @@
     </div>
     <!-- Navegador personalizado de bootstrap-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
-        <div class="container-fluid ">
+        <div class="container-fluid lead">
             <a class="navbar-brand" href="../index.html"><img src="../media/logo2.jpg" width="200px" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,11 +90,11 @@
                     </a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item text-primary " href="../pages/hardware.html">Hard</a></li>
-                            <li><a class="dropdown-item text-primary " href="../pages/software.html">Software </a></li>
+                            <li><a class="dropdown-item text-primary " href="../pages/hardware.html">Accesorios </a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item text-primary" href="../pages/gaming.html">Destino Gamer</a></li>
+                            <li><a class="dropdown-item text-primary" href="../pages/gaming.html">Gamer</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -89,15 +104,16 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html" target="_blank">Contactenos</a>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">🔎</button>
                 </form>
             </div>
         </div>
+    </nav>
     </nav>
     <main class="direcMapa container-fluid">
         <div class="row">
@@ -165,12 +181,20 @@
             <h1 id="top">codigo>_WG </h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
-        <div class="redes">
-            <img src="../media/instagram.png" whidth="32px" height="32px" alt="instagram">
-            <img src="../media/facebook.png" whidth="32px" height="32px" alt="facebook">
-            <img src="../media/twitter.png" whidth="32px" height="32px" alt="twitter">
-            <img src="../media/whatsapp.png" whidth="32px" height="32px" alt="whatsapp">
-        </div>
+        <section class="redes">
+            <div>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+            </div>
+            <div>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+            </div>
+            <div>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+            </div>
+            <div>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+            </div>
+        </section>
         <a href="#top">Ir al inicio</a>
         </div>
     </footer>
