--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -5,18 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Fonts de google: Orbitron,Rajdhani y Staatliches-->
+    <!----- Description y keywords para SEO -->
+    <meta name="description" content="Encontra todo el hardware al mejor precio y te vamos a ayudar a elegir bien">
+    <meta name="keywords" content="windows, office, vga, placas de video, RTX, teclado, gaming, gamer, competencias, asesoramiento, oencofertas,actualizacion, hardware, software, PS4, nintendo, adobe, visual,EA sports">
+    <!----- Fonts de google: Orbitron,Rajdhani y Staatliches -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Rajdhani:wght@600&family=Staatliches&display=swap" rel="stylesheet">
+    <!----- Favicon ----->
     <link rel="shorcut icon" href="../media/icono.ico">
+    <!----- links de animate animated y wow -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/animate.css">
+    <!----- CDN de bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap-grid.min.css">
+    <!----- CSS local de estilo propio -->
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>c>_WG Hardware</title>
-    <link rel="stylesheet" href="pages/hardware.html">
+    <title>Hard >_WG todo el hard y soft que buscas con el mejor asesoramiento</title>
+    <link rel="stylesheet" href="index.html">
 </head>
 
 <body>
@@ -26,12 +33,20 @@
             <h1 id="top">codigo>_WG </h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
-        <div class="redes">
-            <img src="../media/instagram.png" whidth="32px" alt="instagram">
-            <img src="../media/facebook.png" whidth="32px" alt="facebook">
-            <img src="../media/twitter.png" whidth="32px" alt="twitter">
-            <img src="../media/whatsapp.png" whidth="32px" alt="whatsapp">
-        </div>
+        <section class="redes">
+            <div>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+            </div>
+            <div>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+            </div>
+            <div>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+            </div>
+            <div>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+            </div>
+        </section>
     </header>
     <!-- carrusel de bootstrap-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -42,13 +57,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../media/hard1.jpg" class="d-block w-100" alt="Gamers">
+                <img src="../media/carousel/hard1.jpg" class="d-block w-100" alt="cpu black">
             </div>
             <div class="carousel-item">
-                <img src="../media/hard2.jpg" class="d-block w-100" alt="dev">
+                <img src="../media/carousel/hard2.jpg" class="d-block w-100" alt="cpu red">
             </div>
             <div class="carousel-item">
-                <img src="../media/hard3.jpg" class="d-block w-100" alt="Music">
+                <img src="../media/carousel/hard3.jpg" class="d-block w-100" alt="teclado nnotebook">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -62,7 +77,7 @@
     </div>
     <!-- Navegador personalizado de bootstrap-->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
-        <div class="container-fluid ">
+        <div class="container-fluid lead">
             <a class="navbar-brand" href="../index.html"><img src="../media/logo2.jpg" width="200px" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,11 +90,11 @@
                     </a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item text-primary " href="../pages/hardware.html">Hard</a></li>
-                            <li><a class="dropdown-item text-primary " href="../pages/software.html">Software </a></li>
+                            <li><a class="dropdown-item text-primary " href="../pages/hardware.html">Accesorios </a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item text-primary" href="../pages/gaming.html">Destino Gamer</a></li>
+                            <li><a class="dropdown-item text-primary" href="../pages/gaming.html">Gamer</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -89,84 +104,119 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html" target="_blank">Contactenos</a>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">🔎</button>
                 </form>
             </div>
         </div>
     </nav>
-    <!-- Grilla de Grid -->
-    <h2 class="separador">Algunas cuestiones a tener en cuenta</h2>
-    <main class="contenedor1">
-        <div class="reco1">
-            <h2>No te apures, primero preguntate para que vas a usar tu hard</h2>
-            <p>Dependiendo de tu actividad deberías pensar si <br> precisas más potencia de cálculo del procesador, más velocidad para jugar o gran almacenamiento para archivar</p>
-        </div>
-        <div class="reco2">
-            <h2>No todo lo que brilla es oro</h2>
-            <p>Las empresas se esmeran por decorar de forma excesiva sus productos y así llamar la atencion pero tene en cuenta que siempre la calidad es más importante</p>
-        </div>
-        <div class="reco3">
-            <h2>Informate sobre nuevas alternativas </h2>
-            <p>Tal vez un procesador gráfico integrado cubra tus necesidades ya que en la actualidad tienen la capacidad de soportar exigencias tanto para diseñar como para jugar.</p><br>
-        </div>
-        <div class="reco4">
-            <h2>Mas caro no siempres es mejor </h2>
-            <p>Dependiendo de tu actividad deberia poner énfasis si precisas más potencia de cálculo del procesador, más velocidad para jugar o gran almacenamiento para archivar</p><br>
-        </div>
-        <div class="reco5">
-            <h2>Estamos para ayudarte a elegir</h2>
-            <p>Existen ciertas compatibilidades entre dispositivos que se deben respetar a la hora de comprar, por lo que es vital que nos consultes si vas a agregar un repuesto nuevo a un dispositivo ya armado.</p><br>
-        </div>
-        <div class="reco6">
-            <h2>Por último, aprovecha nuestras ofertas! </h2>
-            <p>Siempre tenemos artículos de lanzamiento que se ofrecen por menor valor que su antecesor, asi que veni y aprovechalos!</p><br>
+    <main class="repuestos hardware">
+
+        <aside class="categorias">
+            <ul>
+                <li>Hard</li>
+                <li>Motherboards</li>
+                <li>Procesadores</li>
+                <li>Memorias</li>
+                <li>Almacenamiento</li>
+                <li>Placas de Video</li>
+                <li>Gabinetes</li>
+                <li>Fuentes Power</li>
+                <li>Refrigeración</li>
+                <li>Accesorios Gamer</li>
+                <li>Sonido</li>
+                <li>Ofertas</li>
+            </ul>
+        </aside>
+        <!-- Hardware products -->
+        <div class="articulos hardware">
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Gabinete</p>
+                <img src="../media/articulos/gabinete_thermaltake.png" width="200px" alt="gabinete_Thermltake_T678-GA">
+                <p>Thermltake T678-GA ATX<br> Precio $15.390,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Placa de video</p>
+                <img src="../media/articulos/vga3090.png" width="200px" alt="placa_de_video_GF3060">
+                <p>GEFORCE RTX3090 24GB MSI<br> Precio $642.515,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Teclado</p>
+                <img src="../media/articulos/teclado_sentey.png" width="200px" alt="teclado_sentey_869">
+                <p>SENTEY GTX 869 MECANICO ESP<br> Precio $7.990,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Notebook</p>
+                <img src="../media/articulos/notebook_bangho.png" width="200px" alt="notebook_dell inspirion_1543">
+                <p>DELL INSPIRON 1543 INTEL I5<br> Precio $135.210,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Microprocesador</p>
+                <img src="../media/articulos/micro_ryzen5.png" width="200px" alt="microprocesador_Ryzen5">
+                <p>AMD RYZEN 5 5600G <br> Precio $41.690,00</p>
+            </div>
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Placa de video</p>
+                <img src="../media/articulos/vga3060.png" width="200px" alt="placa_de_video_GF3060de video RTX3060">
+                <p>GEFORCE RTX3060 20GB MSI<br> Precio $642.515,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Motherboard</p>
+                <img src="../media/articulos/Mother_MSI.png" width="200px" alt="Motherboard_MSI_B450">
+                <p>MOTHER MSI B450M <br> PRO-VDH MAX SAM4 B450 <br> Precio $9.891,00</p>
+            </div>
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Auriculares </p>
+                <img src="../media/articulos/auricular_hyperx.png" width="200px" alt="auricular_hyperx">
+                <p>HYPERX <br>CLOUD FLIGHT WIRELESS <br> Precio $13.290,00</p>
+            </div>
+            <div class="cathard catgamer wow animate__animated animate__fadeIn">
+                <p>Webcam </p>
+                <img src="../media/articulos/webcam_solarmax.png" width="200px" alt="webcam_solarmax">
+                <p>SOLARMAX ZOOMY <br> FULL HD 1080p<br> Precio $1.899,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Disco sólido M.2 </p>
+                <img src="../media/articulos/ssd_adata_M2.png" width="200px" alt="ssd_adata_M2">
+                <p>2TB M.2 NVME ADATA XPG <br> Precio $38.463,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Placa de video</p>
+                <img src="../media/articulos/vga1050.png" width="200px" alt="placa_de_video_GTX1050">
+                <p>MSI GEFORCE GTX 1050TI X 4GB <br> Precio $49.950,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Teclado</p>
+                <img src="../media/articulos/teclado_sentey.png" width="200px" alt="teclado_sentey_865">
+                <p>SENTEY GTX 865 MECANICO ESP<br> Precio $5.990,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Gabinete</p>
+                <img src="../media/articulos/gabinete_blanco.png" width="200px" alt="gabinete_thermaltake_blanco">
+                <p>GAMER HB-037 ATX TG<br> Precio $9.290,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Placa de video</p>
+                <img src="../media/articulos/vga1050.png" width="200px" alt="placa_de_video_RTX1050">
+                <p>COLORFULL RTX1050 12GB <br> Precio $53.790,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Disco</p>
+                <img src="../media/articulos/ssd_M2_WDigital.png" width="200px" alt="ssd_M2_WDigital">
+                <p>W. DIGITAL SSD M.2 1TB<br> Precio $15.500,00</p>
+            </div>
+            <div class="cathard wow animate__animated animate__fadeIn">
+                <p>Placa de video</p>
+                <img src="../media/articulos/vga2060.png" width="200px" alt="placa_de_video_RTX2060">
+                <p>ASUS RTX2060 18GB DDR5<br> Precio $113.000,00</p>
+            </div>
+
         </div>
     </main>
-    <h2 class="separador">Los más buscados</h2>
-    <section class="opciones">
-        <div class="col-10 articulos">
-            <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art1">
-                <p> hard Gamer</p>
-            </div>
-            <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art2">
-                <p> hard Gamer</p>
-            </div>
-            <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art3">
-                <p> hard Gamer</p>
-            </div>
-            <div class="cathard catgamer wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art4">
-                <p> hard Gamer</p>
-            </div>
-            <div class="cathard wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art5">
-                <p>Hard for work</p>
-            </div>
-            <div class="cathard wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art6">
-                <p>Hard for work</p>
-            </div>
-            <div class="cathard wow animate__animated animate__fadeIn">
-                <p>Nombre del producto</p>
-                <img src="../media/vga.jpg" width="200px" alt="art7">
-                <p>Hard for work</p>
-            </div>
-        </div>
-    </section>
     <footer class="container-fluid">
         <div class="dire">
             <h6>&copy Todos los derechos reservados por JLG 2021 <br> en el curso de "Desarrollo Wed" de CoderHouse</h6>
@@ -178,12 +228,20 @@
             <h1 id="top">codigo>_WG </h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
-        <div class="redes">
-            <img src="../media/instagram.png" whidth="32px" height="32px" alt="instagram">
-            <img src="../media/facebook.png" whidth="32px" height="32px" alt="facebook">
-            <img src="../media/twitter.png" whidth="32px" height="32px" alt="twitter">
-            <img src="../media/whatsapp.png" whidth="32px" height="32px" alt="whatsapp">
-        </div>
+        <section class="redes">
+            <div>
+                <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
+            </div>
+            <div>
+                <a href="https://es-la.facebook.com/" target="_blank"> <img src="../media/redes/facebook.png" whidth="32px" alt="facebook"></a>
+            </div>
+            <div>
+                <a href="https://twitter.com/?lang=es" target="_blank"><img src="../media/redes/twitter.png" whidth="32px" alt="twitter"></a>
+            </div>
+            <div>
+                <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
+            </div>
+        </section>
         <a href="#top">Ir al inicio</a>
         </div>
     </footer>
